[package]
name = "neworder-rs"
version = "1.0.0"
authors = ["virgesmith <andrew@friarswood.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "neworder"
crate-type = ["cdylib"]

[dependencies]
numpy = "*"
ndarray = "*"
lazy_static = "*"
num = "*"
rand = "0.4.6"
mersenne_twister = "1.1.1"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]