[package]
name = "neworder-rs"
version = "0.0.0"
authors = ["virgesmith <andrew@friarswood.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "_neworder_core"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.13.1"
ndarray = "*"
num = "*"
rand = "0.4.6"
mersenne_twister = "1.1.1"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]